builder/tests/08-unrecognized-attribute.stderr
error: unknown identifier `eac` found
  --> $DIR/08-unrecognized-attribute.rs:22:15
   |
22 |     #[builder(eac = "arg")]
   |               ^^^
